<resources>
    <string name="app_name">街晓商家</string>
    <string name="title_login">登录</string>
    <string name="kk_shangjia_regist">酷酷商家注册11</string>
    <string name="phone_yanzheng">手机验证</string>
    <string name="forget_psw">忘记密码</string>
    <string name="reset_psw">设置密码</string>
    <string name="register_title">商家注册</string>
    <string name="hint_confirm_pwd_input">确认密码</string>
    <string name="release_refresh">释放立即刷新</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="refreshing">正在刷新</string>
    <string name="refresh_success">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="load_more_fail">加载失败</string>
    <string name="store_tables">店铺桌台</string>
    <string name="take_detical_title">A118(包厢)</string>
    <string name="advace_order_detical">预约详情</string>
    <string name="advace_order">预约通知</string>
    <string name="appointment_foot_message">亲,已经到底了呦~</string>
    <string name="goods_add">商品添加</string>
    <string name="goods_edit">商品编辑</string>
    <string name="table_pandect">总览</string>
    <string name="goods_detical">商品详情</string>
    <string name="signboard">招牌</string>
    <string name="goods_image">商品图片</string>
    <string name="recommend_goods_set">推荐菜品设置</string>
    <string name="goods_units">菜品单位</string>
    <string name="goods_taste">商品口味</string>
    <string name="table_box">桌台包厢</string>
    <string name="goods_manager">商品管理</string>
    <string name="operator_feedback">操作反馈</string>
    <string name="new_create">新建</string>
    <string name="edit_content">编辑</string>
    <string name="classify_manage">分类管理</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="refuse_reason_title">拒绝理由</string>
    <string name="refuse_reason">请填写拒绝理由</string>
    <string name="hint_phone_input">输入手机号</string>
    <string name="hint_pwd_input">输入密码</string>
    <string name="hint_verify_code_input">输入验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="forgot_pwd">忘记密码?</string>
    <string name="free_into">免费入驻</string>
    <string name="new_pwd">新密码</string>
    <string name="renew_pwd">确认新密码</string>
    <string name="next">下一步</string>
    <string name="complete">完成</string>
    <string name="table_arrange">桌台安排</string>
    <string name="appointment_remind_inform_detical">预约详情</string>
    <string name="history">历史</string>
    <string name="wine_restaurant">回味酒馆</string>
    <string name="no_goods">暂无商品</string>
    <string name="add_goods">立即添加</string>
    <string name="main_page">主页</string>
    <string name="main_store">商品</string>
    <string name="main_data">数据</string>
    <string name="main_personal">个人</string>
    <string name="lobby">大厅</string>
    <string name="cassette">卡座</string>
    <string name="box">包厢</string>
    <string name="date">时间</string>
    <string name="seat">座位</string>
    <string name="person_num">人数</string>
    <string name="clear">清空</string>
    <string name="delete">删除</string>
    <string name="goods_on">上架</string>
    <string name="add">添加</string>
    <string name="setting">设置</string>
    <string name="scanCode">扫描二维码</string>
    <string name="click_to_load">点击该区域上传图片</string>
    <string name="goods_category_setting">套餐设置</string>
    <string name="goods_introduce">商品介绍</string>
    <string name="goods_name">名称</string>
    <string name="goods_original_price">原价</string>
    <string name="goods_sale_price">售价</string>
    <string name="goods_unit">单位</string>
    <string name="goods_category">套餐商品</string>
    <string name="click_to_edit">点击进行编辑</string>
    <string name="no_setting">未设置</string>
    <string name="need_write">(必填)</string>
    <string name="unit_yuan">元</string>
    <string name="goods_classify">分类</string>
    <string name="footer_to_bottom">亲, 已经到底了~</string>
    <string name="classify_manage_empty">你还没有分类, 请添加</string>
    <string name="join_discount">是否参与全店优惠</string>
    <string name="become_recommend_dish">成为推荐菜品</string>
    <string name="have_recommend_dish">已有推荐菜品</string>
    <string name="my_add">我的添加</string>
    <string name="add_success">添加成功</string>
    <string name="continue_add_goods">继续添加商品>></string>
    <string name="my_staff">我的员工</string>
    <string name="record">记录</string>
    <string name="add_staff">添加员工</string>
    <string name="position_manager">职位管理</string>
    <string name="operating_record">操作记录</string>
    <string name="position_add">职位添加</string>
    <string name="quit">确定</string>
    <string name="staff_edit">员工编辑</string>
    <string name="position_details">职位详情</string>
    <string name="position_look">职位查看</string>
    <string name="casher_management">收银管理</string>
    <string name="account_management">账户管理</string>
    <string name="staff_management">员工管理</string>
    <string name="store_management">店铺管理</string>
    <string name="goods_management">商品管理</string>
    <string name="operating_management">经营管理</string>
    <string name="table_management">桌台管理</string>
    <string name="activity_marketing">营销管理</string>
    <string name="bill_management">账单管理</string>
    <string name="order_management">订单管理</string>
    <string name="appointment_management">预约管理</string>
    <string name="bank_card_bind">银行卡绑定</string>
    <string name="bank_of_deposit">开户人</string>
    <string name="bank_card_number">银行卡号</string>
    <string name="bank">银行</string>
    <string name="opening_bank_area">开户行地区</string>
    <string name="opening_bank_name">开户行名称</string>
    <string name="account_type">账户类型</string>
    <string name="account_manage">账户管理</string>
    <string name="private_account">私人账户</string>
    <string name="public_account">公款账户</string>
    <string name="phone_verification">手机验证</string>
    <string name="auditing_feedback">审核反馈</string>
    <string name="my_account">我的账户</string>
    <string name="account_left">账户余额</string>
    <string name="add_bank">添加银行卡</string>
    <string name="commit_audit">已提交审核</string>
    <string name="finsh">完成</string>
    <string name="withdraw">提现</string>
    <string name="arrive_account">到账账户</string>
    <string name="withdraw_money_sum">提现金额</string>
    <string name="hint_message">注：\t最低额度10元，最高不可超过可提取金额</string>
    <string name="arrive_account_time">2小时后到账</string>
    <string name="Balance">余额</string>
    <string name="edit">编辑</string>
    <string name="hint">审核中</string>
    <string name="change_bind">更换绑定</string>
    <string name="select_bank">选择银行</string>
    <string name="bank_name">中国建设银行</string>
    <string name="withdraw_detail">提现详情</string>
    <string name="hint_time">今天\t\t21:45:36</string>
    <string name="detail">明细</string>
    <string name="left_money_text">余额\t(元)</string>
    <string name="left_money">0.00元</string>
    <string name="input_money_text">入账金额</string>
    <string name="input_money">0.00元</string>
    <string name="bank_bank">无</string>
    <string name="bind_bank_title">绑定银行</string>
    <string name="withdraw_money_count">提现金额</string>
    <string name="commit_success">提交成功</string>
    <string name="audit_success">审核成功</string>
    <string name="remittance">已打款</string>
    <string name="remittance_success">打款成功</string>
    <string name="withdrawable">提现时间</string>
    <string name="remark">备注</string>
    <string name="remark_content">备注内容</string>
    <string name="entity_money">入账金额</string>
    <string name="last_time">最近一次入账</string>
    <string name="procedure_fee">手续费</string>
    <string name="current_deposit">当前提现</string>
    <string name="add_table">添加桌台</string>
    <string name="no_hall">暂无大厅</string>
    <string name="no_card">暂无卡座</string>
    <string name="no_box">暂无包厢</string>
    <string name="flashlight_close">关闭手电筒</string>
    <string name="flashlight_open">打开手电筒</string>
    <string name="qrcode_focus">请对准二维码</string>
    <string name="cerification_msg">核销信息</string>
    <string name="no_cerification_msg">暂无核销信息</string>
    <string name="store_order">店铺订单</string>
    <string name="select_city">选择城市</string>
    <string name="search">搜索</string>
    <string name="exchange_succeed">交易完成</string>
    <string name="order_detail">订单详情</string>
    <string name="current_position_city">当前定位城市</string>
    <string name="position_city">杭州</string>
    <string name="refresh_position">重新定位</string>
    <string name="elec_pay">线上支付</string>
    <string name="cash_pay">现金支付</string>
    <string name="scan_pay">扫码支付</string>
    <string name="exchange_time">交易时间:</string>
    <string name="order_amount">交易金额:</string>
    <string name="table_num">桌台编号:</string>
    <string name="table_number_title">桌台编号</string>
    <string name="all">全部</string>
    <string name="from_to">至</string>
    <string name="bill">账单</string>
    <string name="total_revenue">总收益\t\t(元)</string>
    <string name="total_revenue_count">20000.00</string>
    <string name="advace_input_bill">预计入账</string>
    <string name="advance_input_bill_count">3000.00</string>
    <string name="advance_input_bill_time">2017.11.13</string>
    <string name="wait_calculate_bill">待结算账单</string>
    <string name="already_calculate_bill">已结算账单</string>
    <string name="wait_time">10:20</string>
    <string name="already_calculate_bills">已结算</string>
    <string name="money">1000.00</string>
    <string name="start_time">2017.11.13</string>
    <string name="look_details">查看详情</string>
    <string name="bill_details">账单详情</string>
    <string name="bill_amount">订单总额</string>
    <string name="Activity_reduction">活动减免</string>
    <string name="user_reduction">用户减免</string>
    <string name="trading_volume">成交金额</string>
    <string name="platform_commission">平台抽佣</string>
    <string name="entry_bill_money">入账金额</string>
    <string name="bill_particulars">账单明细</string>
    <string name="select">筛选</string>
    <string name="pay_recipient">买单收银</string>
    <string name="consume_amount">消费金额</string>
    <string name="input_amount">请输入金额</string>
    <string name="generate_qrcode">生成二维码</string>
    <string name="no_discount_amount">不参与优惠金额</string>
    <string name="gathering_message">收款信息</string>
    <string name="table_number">桌台: A1100</string>
    <string name="phone_number">151****4567</string>
    <string name="gathering_time">收款时间:   12:00</string>
    <string name="end_time">2017.11.14</string>
    <string name="reason_choose">理由选择:</string>
    <string name="leave_title">留言</string>
    <string name="attach_call_video">发起视频</string>
    <string name="unable_to_get_loaction">不能获取您的位置!</string>
    <string name="commit">提交</string>
    <string name="pay_time">打款时间</string>
    <string name="withdrawable_bank">提现银行</string>
    <string name="flow_id">流水编号</string>
    <string name="merchant_id">商户编号</string>
    <string name="not_cerification">暂不核销</string>
    <string name="confirm_cerfication">确认核销</string>
    <string name="goods">商品</string>
    <string name="continue_cerification">继续核销</string>
    <string name="input_cerification_code_hint">请在此输入核销码</string>
    <string name="confirm_ok">确认</string>
    <string name="input_cerification_msg">提示:如若输错核销码,将无法完成核销</string>
    <string name="average_consume">人均消费</string>
    <string name="min_consume">最低消费</string>
    <string name="eat_before_pay">先吃后付</string>
    <string name="pay_before_eat">先付后吃</string>
    <string name="about_us_app_name">街晓生活</string>
    <string name="company_name">安徽自善网络科技有限公司</string>
    <string name="company_spell_name">Anhui\tZishan\tInternet\tTechnology\tCo.Ltd</string>
    <string name="eat_before_pay_desc">该模式适用快餐形式的店铺, 用户需在线上点餐付款完毕后商家再去服务用户</string>
    <string name="pay_before_eat_desc">该模式适用会客聚餐形式的店铺, 用户可在平台先进行点餐享受服务之后再进行支付款项</string>
    <string name="money_unit">元</string>
    <string name="setting_average_amount">请设置人均消费</string>
    <string name="setting_min_amount">请设置最低消费</string>
    <string name="ticket_store_num">卡券库存</string>
    <string name="repository_no_limited">不限库存</string>
    <string name="set_ticket_num">请设置卡券数量</string>
</resources>