<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_color"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_marginTop="61dp"
        android:src="@mipmap/checked_green_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_success"
        android:textColor="@color/numberpicker_text"
        android:textSize="17sp" />


    <TextView
        android:id="@+id/add_goods_complete"
        android:layout_width="292dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:background="@drawable/gradient_blue_shape_2"
        android:gravity="center"
        android:text="@string/complete"
        android:textColor="@color/text_color_white"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/continue_add_goods"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="27dp"
        android:gravity="center"
        android:text="@string/continue_add_goods"
        android:textColor="@color/text_color_red"
        android:textSize="15sp" />
</LinearLayout>
