<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_color">

    <RelativeLayout
        android:id="@+id/average_consume_layout"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/bg_color_white">


        <TextView
            android:id="@+id/average_consume_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:text="@string/average_consume"
            android:textColor="@color/text_color_light_black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/setting_average_amount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@+id/average_unit"
            android:background="@drawable/edit_text_bg_white"
            android:gravity="right|center_vertical"
            android:hint="@string/setting_average_amount"
            android:inputType="number|numberDecimal"
            android:maxLines="1"
            android:textColor="@color/text_color_light_black"
            android:textColorHint="@color/text_color_gray"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/average_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:text="@string/money_unit"
            android:textColor="@color/text_color_light_black"
            android:textSize="15sp" />

        <View
            style="@style/line"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/average_consume_layout"
        android:background="@color/bg_color_white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:text="@string/min_consume"
            android:textColor="@color/text_color_light_black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/setting_min_amount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@+id/min_unit"
            android:background="@drawable/edit_text_bg_white"
            android:gravity="right|center_vertical"
            android:hint="@string/setting_min_amount"
            android:inputType="number|numberDecimal"
            android:maxLines="1"
            android:textColor="@color/text_color_light_black"
            android:textColorHint="@color/text_color_gray"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/min_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:text="@string/money_unit"
            android:textColor="@color/text_color_light_black"
            android:textSize="15sp" />
    </RelativeLayout>


    <TextView
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/gradient_blue_shape_3"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/text_color_white"
        android:textSize="16sp" />

</RelativeLayout>