<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_color"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/eat_before_pay_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_color_white">

        <TextView
            android:id="@+id/eat_before_pay_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/eat_before_pay"
            android:textColor="@color/text_color_light_black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/eat_before_pay_desc"
            android:layout_width="261dp"
            android:layout_below="@id/eat_before_pay_title"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="15dp"
            android:gravity="center_vertical"
            android:text="@string/eat_before_pay_desc"
            android:textColor="@color/text_color_gray"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/eat_before_pay_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="14dp"
            android:src="@drawable/image_selector" />

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="14dp"
        android:background="@color/app_divder_color" />

    <RelativeLayout
        android:id="@+id/pay_before_eat_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_color_white">

        <TextView
            android:id="@+id/pay_before_eat_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:text="@string/pay_before_eat"
            android:textColor="@color/text_color_light_black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/pay_before_eat_desc"
            android:layout_width="261dp"
            android:layout_below="@id/pay_before_eat_title"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:text="@string/pay_before_eat_desc"
            android:textColor="@color/text_color_gray"
            android:textSize="12sp"
            android:layout_marginBottom="10dp"/>

        <ImageView
            android:id="@+id/pay_before_eat_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="14dp"
            android:src="@drawable/image_selector" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/confirm_store_model"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@drawable/gradient_blue_shape_3"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/text_color_white"
        android:textSize="16sp" />

</LinearLayout>