<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color_white">


    <TextView
        android:id="@+id/cerification_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="78dp"
        android:drawableLeft="@mipmap/scan_result_left_icon"
        android:drawablePadding="11dp"
        android:drawableRight="@mipmap/scan_result_right_icon"
        android:text="@string/goods"
        android:textColor="@color/text_color_little_black"
        android:textSize="27sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/cerification_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_below="@id/cerification_title"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/not_cerification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="66dp"
        android:gravity="center"
        android:text="@string/not_cerification"
        android:textColor="@color/return_mainpage"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/confirm_cerfication"
        android:layout_width="330dp"
        android:layout_height="44dp"
        android:layout_above="@id/not_cerification"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/cerification_dark_blue_shape"
        android:gravity="center"
        android:text="@string/confirm_cerfication"
        android:textColor="@color/text_color_white"
        android:textSize="15sp" />
</RelativeLayout>