<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_color">

    <ImageView
        android:id="@+id/about_us_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="132dp"
        android:src="@mipmap/new_about_us_app_icon" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_us_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/about_us_app_name"
        android:textColor="@color/color02"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/version_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/stroke_color_light_coffee"
        android:textSize="13sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/company_spell_name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp"
        android:text="@string/company_name"
        android:textColor="@color/company_name_color"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/company_spell_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp"
        android:text="@string/company_spell_name"
        android:textColor="@color/company_name_color"
        android:textSize="13sp" />

</RelativeLayout>